syntax = "proto3";

option csharp_namespace = "ViewService.gRPC.Server.Protos";

service View {
	rpc GetView (GrpcGetViewRequest) returns (GrpcViewAsString);
	rpc GetStaticFile (GrpcGetStaticFileRequest) returns (GrpcViewAsString);
}

message GrpcGetViewRequest {
	string path = 1;
}

message GrpcGetStaticFileRequest {
	string path = 1;
}

message GrpcViewAsString {
	string data = 1;
}